Add maven.compiler.release to the jdk9+ build profile.